# deeptile

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  heuristicMod.cc  main.cpp  notes.md  run.py  settings.ini  testDocker.cc
include/: BoardHandler.hh  DataLogger.hh  ExpectiMax.hh  GameStats.hh  HeuristicScorer.hh  JsonStats.hh  MLScorer.hh  Output.hh  RowHandler.hh  RunStats.hh  ScoreCache.hh  ScorerInterface.hh  Settings.hh  Utility.hh
notes/: cache_pruning.md  notes.md
python/: check_docker.py  draw_manual_data.py  testNN.py  train.py
python/include/: board_utilities.py  model_saver.py
python/models/: cnn_deeper.py
src/: BoardHandler.cc  DataLogger.cc  ExpectiMax.cc  GameStats.cc  HeuristicScorer.cc  JsonStats.cc  MLScorer.cc  Output.cc  RowHandler.cc  RunStats.cc  ScoreCache.cc  Settings.cc  Utility.cc
tests/: CMakeLists.txt  testBoard.cc  testHeuristicScorer.cc  testMain.cc  testRow.cc
